[ALL] create db, initialize it, add config for db, create model and migrations, insert data through app.js, pass to db through node app.js

--- a/config/config.json
+++ b/config/config.json
@@ -3,7 +3,7 @@
   {
     "username": "imjchiang",
     "password": 5375,
-    "database": "sequelize_project_development",
+    "database": "sequelize_project",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
